fixed folder name

--- a/src/Sitecore.Support.196782/Sitecore.Support.196782.csproj
+++ b/src/Sitecore.Support.196782/Sitecore.Support.196782.csproj
@@ -85,7 +85,7 @@
     <None Include="web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="sitecore\shell\client\Applications\ECM\EmailCampaign.Client\Pipelines\AddAttachments\AddAttachment.Execute.js" />
+    <Content Include="sitecore\shell\client\Applications\ECM\EmailCampaign.Client\Pipelines\AddAttachment\AddAttachment.Execute.js" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
